--- a/.github/workflows/simulator.yml
+++ b/.github/workflows/simulator.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   generate-data:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 120  # Increased from 60 to 120 minutes
     
     steps:
     - name: Checkout repository
@@ -32,7 +32,22 @@ jobs:
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
-    - name: Run data generator
+    - name: Check environment and configuration
+      run: |
+        echo "=== Environment Variables ==="
+        echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}"
+        echo "BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}"
+        echo "INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '6000000000' }}"
+        echo "DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}"
+        echo "SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}"
+        echo "=== Python Version ==="
+        python --version
+        echo "=== Disk Space ==="
+        df -h
+        echo "=== Memory ==="
+        free -h
+        
+    - name: Run data generator with enhanced logging
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
@@ -42,7 +57,27 @@ jobs:
         SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}
       run: |
         cd FMCG
-        python main.py
+        echo "=== Starting Data Generation ==="
+        echo "Time: $(date)"
+        echo "Working Directory: $(pwd)"
+        
+        # Set environment variables for debugging
+        export PYTHONUNBUFFERED=1
+        export GCP_SERVICE_ACCOUNT="${{ secrets.GCP_SERVICE_ACCOUNT }}"
+        
+        # Run with timeout and progress monitoring
+        python main.py 2>&1 | tee /tmp/generator.log
+        
+        echo "=== Data Generation Completed ==="
+        echo "Time: $(date)"
+        echo "=== Log File Size ==="
+        ls -lh /tmp/generator.log
+        
+    - name: Upload logs if failed
+      if: failure()
+      run: |
+        echo "=== Uploading error logs ==="
+        cat /tmp/generator.log
         
     - name: Cleanup
       if: always()
