--- a/.github/workflows/simulator.yml
+++ b/.github/workflows/simulator.yml
@@ -37,54 +37,38 @@ jobs:
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
-    - name: Check environment and configuration
+    - name: Quick environment check
       run: |
-        echo "=== Environment Variables ==="
-        echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}"
-        echo "BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}"
-        echo "INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}"
-        echo "DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}"
-        echo "SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}"
-        echo "=== Python Version ==="
-        python --version
-        echo "=== System Resources ==="
-        echo "CPU cores: $(nproc)"
-        echo "Memory: $(free -h | grep '^Mem:' | awk '{print $2}')"
-        echo "Disk space: $(df -h / | tail -1 | awk '{print $4}')"
+        echo "🔧 Environment: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}/${{ secrets.BQ_DATASET || 'fmcg_analytics' }}"
+        echo "📊 Sales Target: ₱${{ secrets.INITIAL_SALES_AMOUNT || '8000000000' }}"
+        echo "⏰ Run Type: ${{ github.event_name == 'schedule' && 'Scheduled' || 'Manual' }}"
         
-    - name: Run data generator with enhanced monitoring
+    - name: Run data generator
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
-        INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}
-        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}
+        INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '8000000000' }}
+        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2192000' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}
       run: |
         cd FMCG
-        echo "=== Starting Data Generation ==="
-        echo "Time: $(date)"
-        echo "Working Directory: $(pwd)"
-        echo "Available Memory: $(free -h | grep '^Mem:' | awk '{print $7}')"
+        echo "🚀 Starting FMCG Data Generator..."
+        echo "⏱️  Started: $(date)"
         
-        # Set environment variables for debugging
-        export PYTHONUNBUFFERED=1
-        export GCP_SERVICE_ACCOUNT="${{ secrets.GCP_SERVICE_ACCOUNT }}"
+        # Run with simplified logging
+        python main.py 2>&1 | grep -E "(INFO|ERROR|✅|❌|🔍|📊|Generated|Completed|Failed)" || true
         
-        # Run with timeout and progress monitoring
-        timeout 150m python main.py 2>&1 | tee /tmp/generator.log
+        echo "✅ Finished: $(date)"
         
-        echo "=== Data Generation Completed ==="
-        echo "Time: $(date)"
-        echo "=== Log File Size ==="
-        ls -lh /tmp/generator.log
-        
-    - name: Upload logs if failed
+    - name: Show error summary on failure
       if: failure()
       run: |
-        echo "=== Uploading error logs ==="
-        echo "Last 100 lines of generator log:"
-        tail -100 /tmp/generator.log || echo "No log file found"
+        echo "❌ Generation failed - Check logs above"
+        echo "🔍 Common issues:"
+        echo "  - BigQuery permissions"
+        echo "  - GCP authentication"
+        echo "  - Memory/time limits"
         
     - name: Cleanup
       if: always()
