Fix create_tables.py environment variables and error handling

--- a/.github/workflows/simulator.yml
+++ b/.github/workflows/simulator.yml
@@ -60,6 +60,7 @@ jobs:
       run: |
         echo "=== Pre-creating BigQuery Tables ==="
         echo "Time: $(date)"
+        echo "Working Directory: $(pwd)"
         
         # Set environment variables
         export PYTHONUNBUFFERED=1
