--- a/.github/workflows/manual-run.yml
+++ b/.github/workflows/manual-run.yml
@@ -1,11 +1,7 @@
-name: Daily Data Generator (Scheduled)
+name: Manual Data Generator
 
 on:
-  schedule:
-    # Production schedule: Runs at 12 AM PHT (UTC+8) = 16:00 UTC
-    - cron: '0 16 * * *'
-    # Testing schedule: Runs every 2 minute (TEMPORARILY ENABLED FOR TESTING)
-    - cron: '*/2 * * * *'
+  workflow_dispatch:
 
 jobs:
   generate-data:
@@ -43,7 +39,7 @@ jobs:
         echo "BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}"
         echo "INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}"
         echo "DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}"
-        echo "SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}"
+        echo "SCHEDULED_RUN: false"  # Always false for manual runs
         echo "=== Python Version ==="
         python --version
         echo "=== System Resources ==="
@@ -78,13 +74,14 @@ jobs:
         INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}
         DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-        SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}
+        SCHEDULED_RUN: false  # Force manual mode
       run: |
         cd FMCG
-        echo "=== Starting Data Generation ==="
+        echo "=== Starting Manual Data Generation ==="
         echo "Time: $(date)"
         echo "Working Directory: $(pwd)"
         echo "Available Memory: $(free -h | grep '^Mem:' | awk '{print $7}')"
+        echo "SCHEDULED_RUN: $SCHEDULED_RUN"
         
         # Set environment variables for debugging
         export PYTHONUNBUFFERED=1
