--- a/.github/workflows/simulator.yml
+++ b/.github/workflows/simulator.yml
@@ -3,7 +3,7 @@ name: Daily Data Generator (Scheduled)
 on:
   schedule:
     # Production schedule: Runs at 12 AM PHT (UTC+8) = 16:00 UTC
-    - cron: '0 16 * * *'
+    #- cron: '0 16 * * *'
     # Testing schedule: Runs every 2 minute (TEMPORARILY ENABLED FOR TESTING)
     - cron: '*/2 * * * *'
 
@@ -41,8 +41,8 @@ jobs:
         echo "=== Environment Variables ==="
         echo "GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}"
         echo "BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}"
-        echo "INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}"
-        echo "DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}"
+        echo "INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '9000000000' }}"
+        echo "DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}"
         echo "SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}"
         echo "=== Python Version ==="
         python --version
@@ -75,8 +75,8 @@ jobs:
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
-        INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '7000000000' }}
-        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '1644000' }}
+        INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '9000000000' }}
+        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         SCHEDULED_RUN: ${{ github.event_name == 'schedule' && 'true' || 'false' }}
       run: |
