--- a/.github/workflows/daily-sales.yml
+++ b/.github/workflows/daily-sales.yml
@@ -41,5 +41,5 @@ jobs:
         
         echo "Daily sales run completed!"
       env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         PROJECT_ID: ${{ secrets.PROJECT_ID }}
