--- a/.github/workflows/monthly-update.yml
+++ b/.github/workflows/monthly-update.yml
@@ -54,5 +54,5 @@ jobs:
         
         echo "Monthly update completed!"
       env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         PROJECT_ID: ${{ secrets.PROJECT_ID }}
