--- a/.github/workflows/daily-sales-only.yml
+++ b/.github/workflows/daily-sales-only.yml
@@ -1,4 +1,4 @@
-name: Daily Sales Run
+name: Daily Sales Only
 on:
   schedule:
     # Run daily at 4 AM UTC (12 PM PHT)
@@ -8,7 +8,7 @@ on:
 jobs:
   daily-sales:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 30
     environment: production
     
     env:
@@ -34,27 +34,26 @@ jobs:
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
-    - name: Run Daily Sales Generation
+    - name: Run Daily Sales Only
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-        SCHEDULED_RUN: true
-        FORCE_REFRESH: false
+        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
       run: |
         cd FMCG
-        echo "=== Starting Daily Sales Run ==="
+        echo "=== Starting Daily Sales Only ==="
         echo "Time: $(date)"
         echo "Working Directory: $(pwd)"
-        echo "SCHEDULED_RUN: $SCHEDULED_RUN"
         
         # Set environment variables
         export PYTHONUNBUFFERED=1
         export GCP_SERVICE_ACCOUNT="${{ secrets.GCP_SERVICE_ACCOUNT }}"
         
-        python main.py
+        # Run only daily sales generation
+        python daily_sales_only.py
         
-        echo "=== Daily Sales Run Completed ==="
+        echo "=== Daily Sales Completed ==="
         echo "Time: $(date)"
         
     - name: Cleanup
