--- a/.github/workflows/monthly-update.yml
+++ b/.github/workflows/monthly-update.yml
@@ -1,4 +1,4 @@
-name: Monthly Data Update
+name: Monthly Update - Inventory & Costs
 on:
   schedule:
     # Run on the last day of every month at 4 AM UTC (12 PM PHT)
@@ -8,21 +8,31 @@ on:
 jobs:
   monthly-update:
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     environment: production
     
+    env:
+      PYTHONUNBUFFERED: 1
+      PYTHONHASHSEED: 0
+    
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
         python-version: '3.14'
         
     - name: Install dependencies
       run: |
-        cd FMCG
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r FMCG/requirements.txt
+        
+    - name: Authenticate to GCP
+      run: |
+        echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
+        echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
     - name: Check if today is last day of month
       run: |
@@ -38,21 +48,32 @@ jobs:
         
         echo "Today is the last day of the month! Running monthly update..."
         
-    - name: Run Monthly Data Generation
+    - name: Run Monthly Update
+      env:
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
+        BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
+        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+        INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '9000000000' }}
+        SCHEDULED_RUN: true
+        FORCE_REFRESH: false
       run: |
         cd FMCG
-        # Set environment variables for monthly run
-        export SCHEDULED_RUN=true
-        export FORCE_REFRESH=false
+        echo "=== Starting Monthly Update ==="
+        echo "Time: $(date)"
+        echo "Working Directory: $(pwd)"
+        echo "SCHEDULED_RUN: $SCHEDULED_RUN"
+        echo "This will update: Inventory, Products, Employees, Operating Costs"
         
-        echo "Starting Monthly Data Update..."
-        echo "This run will update: New employees, inventory, operating costs"
-        echo "Sales data will also be appended"
-        echo "Run time: $(date)"
+        # Set environment variables
+        export PYTHONUNBUFFERED=1
+        export GCP_SERVICE_ACCOUNT="${{ secrets.GCP_SERVICE_ACCOUNT }}"
         
         python main.py
         
-        echo "Monthly update completed!"
-      env:
-        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-        PROJECT_ID: ${{ secrets.PROJECT_ID }}
+        echo "=== Monthly Update Completed ==="
+        echo "Time: $(date)"
+        
+    - name: Cleanup
+      if: always()
+      run: |
+        rm -f $HOME/gcloud-key.json
