--- a/.github/workflows/daily-sales-only.yml
+++ b/.github/workflows/daily-sales-only.yml
@@ -27,34 +27,51 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r FMCG/requirements.txt
+        pip install -r requirements.txt
         
     - name: Authenticate to GCP
       run: |
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
+    - name: Setup environment
+      env:
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
+        BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_warehouse' }}
+        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
+        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+      run: |
+        echo "=== Setting up Environment ==="
+        echo "Time: $(date)"
+        echo "Working Directory: $(pwd)"
+        
+        # Create .env file for configuration
+        cat > .env << EOF
+        GCP_PROJECT_ID=${GCP_PROJECT_ID}
+        GCP_DATASET=${BQ_DATASET}
+        DAILY_SALES_AMOUNT=${DAILY_SALES_AMOUNT}
+        LOG_LEVEL=INFO
+        BATCH_SIZE=1000
+        EOF
+        
+        echo "=== Environment Setup Completed ==="
+        echo "Time: $(date)"
+        
     - name: Run Daily Sales Only
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
-        BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_analytics' }}
+        BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_warehouse' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
         SCHEDULED_RUN: true
-        FORCE_REFRESH: false
       run: |
-        cd FMCG
         echo "=== Starting Daily Sales Only ==="
         echo "Time: $(date)"
         echo "Working Directory: $(pwd)"
         echo "SCHEDULED_RUN: $SCHEDULED_RUN"
         
-        # Set environment variables
-        export PYTHONUNBUFFERED=1
-        export GCP_SERVICE_ACCOUNT="${{ secrets.GCP_SERVICE_ACCOUNT }}"
-        
-        # Run main.py with daily sales only logic
-        python main.py
+        # Run incremental sales update
+        python src/main.py --incremental
         
         echo "=== Daily Sales Completed ==="
         echo "Time: $(date)"
@@ -63,3 +80,4 @@ jobs:
       if: always()
       run: |
         rm -f $HOME/gcloud-key.json
+        rm -f .env
