--- a/.github/workflows/monthly-update.yml
+++ b/.github/workflows/monthly-update.yml
@@ -36,7 +36,7 @@ jobs:
         
     - name: Setup environment
       env:
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-generator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_warehouse' }}
         INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '8000000000' }}
         DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
@@ -61,7 +61,7 @@ jobs:
         
     - name: Run Monthly Update
       env:
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-simulator' }}
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-generator' }}
         BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_warehouse' }}
         GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
         INITIAL_SALES_AMOUNT: ${{ secrets.INITIAL_SALES_AMOUNT || '8000000000' }}
