--- a/.github/workflows/daily-sales-only.yml
+++ b/.github/workflows/daily-sales-only.yml
@@ -34,6 +34,27 @@ jobs:
         echo "${{ secrets.GCP_SERVICE_ACCOUNT }}" | base64 -d > $HOME/gcloud-key.json
         echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcloud-key.json" >> $GITHUB_ENV
         
+    - name: Run setup script
+      env:
+        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-generator' }}
+        BQ_DATASET: ${{ secrets.BQ_DATASET || 'fmcg_warehouse' }}
+        DAILY_SALES_AMOUNT: ${{ secrets.DAILY_SALES_AMOUNT || '2000000' }}
+        GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+      run: |
+        echo "=== Running Setup Script ==="
+        echo "Time: $(date)"
+        
+        # Set environment variables for setup script
+        export GCP_PROJECT_ID="${GCP_PROJECT_ID}"
+        export BQ_DATASET="${BQ_DATASET}"
+        export DAILY_SALES_AMOUNT="${DAILY_SALES_AMOUNT}"
+        
+        # Run setup to verify configuration and create dataset
+        python scripts/setup.py
+        
+        echo "=== Setup Completed ==="
+        echo "Time: $(date)"
+        
     - name: Setup environment
       env:
         GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID || 'fmcg-data-generator' }}
